Add the Bytecode File to Hedera (and Create a Token!).
